--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,14 +2,41 @@
 title: Le Wagon - Middleman
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+  <div class="banner-content">
+    <h1>Welcome home</h1>
+    <p>Book unique homes and experience a city like a local.</p>
+    <form class="form-inline">
+      <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputWhere" placeholder="Where?">
+      <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputWhen" placeholder="When?">
+      <div class="form-group">
+      <select id="disabledSelect" class="form-control">
+        <option>1 guest</option>
+        <option>2 guests</option>
+        <option>3 guests</option>
+      </select>
+    </div>
+      <button href="#" type="submit" class="btn btn-primary mb-2">Search</button>
+    </form>
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <h3 class="text-center">Recent flats</h3>
+    <% %w(nantes paris berlin).each do |city| %>
+    <div class="col-xs-12 col-sm-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%= city %>');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon <%= city.capitalize %></h2>
+          <p>Very cool city, the best</p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
+
