--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,8 @@
     <%= favicon_tag 'images/favicon.png' %>
   </head>
   <body>
+    <%= partial "layouts/partials/navbar" %>
     <%= yield %>
+    <%= partial "layouts/partials/footer" %>
   </body>
 </html>
